--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hi, I'm Yeshitha Dishan</h1>
+<p>Waiting for more information soon........!</p>
 </body>
 </html>
